--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,8 +16,7 @@
 		</div>
 		<div>
 			<a href="/">Index</a><br />
-			<img src="{"cat.jpg" %}"
-				alt="Picture of a cat" />
+			<img src="{{ MEDIA_URL }}cat.jpg" />
 		</div>
 	</body>
 	
