Chapter 5 no exercise

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,9 +9,8 @@
 	</head>
 	
 	<body>
-		<h1>Rango says</h1>
+		<h1>Rango says here is the about page</h1>
 		<div>
-			here is the about page <br />
 			<strong>{{ boldmessage }}</strong> <br />
 		</div>
 		<div>
