--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,9 +10,18 @@
 	
 	<body>
 		<h1>Rango says...</h1>
+		<div> hey there partner! </div>
+	
 		<div>
-			hey there partner! <br />
-			<strong>{{ boldmessage }}</strong> <br />
+		{% if categories %}
+		<ul>
+			{% for category in categories %}
+				<li>{{ category.name }}</li>
+			{% endfor %}
+		</ul>
+		{% else %}
+			<strong>There are no categories present</strong>
+		{% endif %}
 		</div>
 		<div>
 			<a href="/rango/about/">About</a><br />
