--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -4,19 +4,23 @@
 
 <html>
 
-	<head>
-		<title>About</title>
-	</head>
-	
-	<body>
-		<h1>Rango says here is the about page</h1>
-		<div>
-			<strong>{{ boldmessage }}</strong> <br />
-		</div>
-		<div>
-			<a href="/">Index</a><br />
-			<img src="{{ MEDIA_URL }}cat.jpg" />
-		</div>
-	</body>
-	
+    <head>
+        <title>About</title>
+    </head>
+    
+    <body>
+        <h1>Rango says here is the about page</h1>
+        <div>
+            <strong>{{ boldmessage }}</strong> <br />
+        </div>
+        <div>
+            <a href="/">Index</a><br />
+            <img src="{{ MEDIA_URL }}cat.jpg" />
+        </div>
+        <div>
+            <img src="{% static "images/rango.jpg" %}"
+                alt="Picture of Rango" />
+        </div>
+    </body>
+    
 </html>
