--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,9 +10,7 @@
     
     <body>
         <h1>Rango says here is the about page</h1>
-        <div>
-            <strong>{{ boldmessage }}</strong> <br />
-        </div>
+        <div>This tutorial has been put together by Suguru Moriya</div>
         <div>
             <a href="/">Index</a><br />
             <img src="{{ MEDIA_URL }}cat.jpg" />
