--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -23,6 +23,7 @@
     
     <div>
         <a href="/">Index</a><br />
+		<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
     </div>
     
 </body>
