--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Rango says...</h1>
     <div> hey there partner! </div>
+    <strong>{{ boldmessage }}</strong><br />
     
     <h2>Most Liked Categories</h2>
     <div>
@@ -38,7 +39,8 @@
     </div>
     
     <div>
-        <a href="/rango/about/">About Rango</a><br />
+        <a href="/rango/about/">About</a><br />
+        <a href="/rango/add_category/">Add a New Category</a><br />
         <img src="{% static "images/rango.jpg" %}"alt="Picture of Rango" />
     </div>
 </body>
