--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
     
-    <body>
-        <h1>Add a Page to {{ category.slug }}</h1>
-        <div>
-            {% if category %}
-				<form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-                {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %} 
-                {% for field in form.visible_fields %} <br />
-                    {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }}
-                {% endfor %}<br />
-                <input type="submit" name="submit" value="Add Page" /> 
-            </form>
-            {% else %}
-                category by this name does not exist 
-            {% endif %}
-        </div>
-    </body>
-</html>
+{% block body_block %}
+    <h1>Add a Page to {{ category.slug }}</h1>
+    <div>
+        {% if category %}
+            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %} 
+            {% for field in form.visible_fields %} <br />
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}<br />
+            <input type="submit" name="submit" value="Add Page" /> 
+        </form>
+        {% else %}
+            category by this name does not exist 
+        {% endif %}
+    </div>
+{% endblock %}
