--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-
-    <head>
-        <title>About</title>
-    </head>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
     
-    <body>
+{% block body_block %}
         <h1>Rango says here is the about page</h1>
         <div>This tutorial has been put together by Suguru Moriya</div>
         <div>
-            <a href="/">Index</a><br />
-            <img src="{{ MEDIA_URL }}cat.jpg" />
+            <img src="{{ MEDIA_URL }}cat.jpg"alt="Picture of a cat" />
         </div>
         <div>
-            <img src="{% static "images/rango.jpg" %}"
-                alt="Picture of Rango" />
+            <img src="{% static "images/rango.jpg" %}"alt="Picture of Rango" />
         </div>
-    </body>
-    
-</html>
+{% endblock %}
