--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-<head>
-    <title>Rango</title>
-</head>
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
     
-<body>
+{% block body_block %}
     <h1>Rango says...</h1>
     <div> hey there partner! </div>
     <strong>{{ boldmessage }}</strong><br />
@@ -15,9 +16,9 @@
     {% if categories %}
     <ul>
         {% for category in categories %}
-        <li>
-        <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
-        </li>
+            <li>
+                <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
+            </li>
         {% endfor %}
     </ul>
     {% else %}
@@ -39,9 +40,6 @@
     </div>
     
     <div>
-        <a href="/rango/about/">About</a><br />
-        <a href="/rango/add_category/">Add a New Category</a><br />
         <img src="{% static "images/rango.jpg" %}"alt="Picture of Rango" />
     </div>
-</body>
-</html>
+{% endblock %}
