--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,11 @@
     
 {% block body_block %}
     <h1>Rango says...</h1>
-    <div> hey there partner! </div>
+    {% if user.is_authenticated %}
+        howdy {{ user.username }}!
+    {% else %}
+        hey there partner!
+    {% endif %}
     <strong>{{ boldmessage }}</strong><br />
     
     <h2>Most Liked Categories</h2>
