--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -19,7 +19,9 @@
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
-        <a href="{% url 'add_page' category.slug %}">Add Page</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'add_page' category.slug %}">Add Page</a>
+        {% endif %}
     {% else %}
         The specified category does not exist!
     {% endif %}
