--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,4 +15,5 @@
         <div>
             <img src="{% static "images/rango.jpg" %}"alt="Picture of Rango" />
         </div>
+		<p>visits: {{ visits }}</p>
 {% endblock %}
