--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -46,4 +46,5 @@
     <div>
         <img src="{% static "images/rango.jpg" %}"alt="Picture of Rango" />
     </div>
+	<p>visits: {{ visits }}</p>
 {% endblock %}
